<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_004_wall_calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_008_contacts"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_003_dollar_symbol"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_006_bell"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_005_settings"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
