<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddReminderFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addReminderHeaderTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/addReminderTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addReminderHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/addReminderDateTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/addReminderDate" />

            <!--<com.google.android.material.textfield.TextInputEditText-->
            <!--android:id="@+id/addReminderDate"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:ems="10"-->
            <!--android:gravity="start|top"-->
            <!--android:inputType="datetime"/>-->

            <!--<Button-->
            <!--android:id="@+id/reminderDatePickerButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="..." />-->

            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                android:id="@+id/reminderDatePicker"
                picker_curve="true"
                picker_cyclic="true"
                picker_visibleItemCount="3"
                android:layout_width="wrap_content"
                android:layout_height="230dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/reminderCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addNoteCancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reminderSaveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addNoteOK" />
        </TableRow>
    </TableLayout>

</LinearLayout>